--- a/src/app/views/category/category.component.html
+++ b/src/app/views/category/category.component.html
@@ -2,7 +2,7 @@
   <h1>Category</h1>
 
   <div class="menu-list">
-    <div class="flex justify-content-center">
+    <div class="flex justify-content-center py-2">
       <div class="flex flex-wrap gap-3 justify-content-center">
         <div *ngFor="let item of menus">
           <app-card-menu
